Fix the case when a binding's single insertion point is a node that is itself bound by a binding with insertion points.  Bug 403962, r+sr=sicking